# qdroidjni-tool

./: .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  comment_parser.cpp  comment_parser.h  common_file_writer.cpp  common_file_writer.h  config-debug.cmake  config-release.cmake  configuration_file.cpp  configuration_file.h  debug.cpp  debug.h  error.cpp  error.h  file.cpp  file.h  function_parser.cpp  function_parser.h  java.cpp  java.h  java_class_files.cpp  java_class_files.h  main.cpp  qjnidroid-tool.pro  qt.cpp  qt.h  qt_class_files.cpp  qt_class_files.h  string_utils.cpp  string_utils.h  whitespace_utils.cpp  whitespace_utils.h
core/: CMakeLists.txt  context.cpp  context.h  core.h  def.h  delegates.cpp  delegates.h  errors.cpp  errors.h  magabe_parser-coreConfig.cmake.in  parser.cpp  parser.h  result.cpp  result.h  utils.cpp  utils.h
parsers/: CMakeLists.txt  any_character_parser.cpp  any_character_parser.h  char_parsers.cpp  char_parsers.h  magabe_parser-parsersConfig.cmake.in  pattern_parser.cpp  pattern_parser.h  space_parsers.cpp  space_parsers.h  string_parser.cpp  string_parser.h
